@@ -107,10 +107,6 @@ public class PredicatePushdownOptimizer extends Rule {
                 return false;
             loFilter = (LOFilter) succeds.get(0);
 
-            // Filter has dependency other than load, skip optimization
-            if (currentPlan.getSoftLinkPredecessors(loFilter) != null)
-                return false;
-
             // we have to check more only if LoadFunc implements LoadPredicatePushdown
             loadFunc = loLoad.getLoadFunc();
             if (!(loadFunc instanceof LoadPredicatePushdown)) {
